# chatters

./: .gitignore  Cargo.nix  Cargo.toml  README.md  config.toml  crate-hashes.json  flake.nix
crates/chatters-lib/: Cargo.toml
crates/chatters-lib/src/: backend_actor.rs  backends.rs  commands.rs  compose.rs  config.rs  hooks.rs  keybinds.rs  lib.rs  message.rs  tui.rs  util.rs
crates/chatters-lib/src/snapshots/: chatters_lib__commands__tests__index_or_string_from_str-2.snap  chatters_lib__commands__tests__index_or_string_from_str-3.snap  chatters_lib__commands__tests__index_or_string_from_str-4.snap  chatters_lib__commands__tests__index_or_string_from_str.snap  chatters_lib__commands__tests__last_part_of_shell_string-2.snap  chatters_lib__commands__tests__last_part_of_shell_string-3.snap  chatters_lib__commands__tests__last_part_of_shell_string-4.snap  chatters_lib__commands__tests__last_part_of_shell_string-5.snap  chatters_lib__commands__tests__last_part_of_shell_string-6.snap  chatters_lib__commands__tests__last_part_of_shell_string-7.snap  chatters_lib__commands__tests__last_part_of_shell_string.snap  chatters_lib__commands__tests__list_completion-2.snap  chatters_lib__commands__tests__list_completion-3.snap  chatters_lib__commands__tests__list_completion-4.snap  chatters_lib__commands__tests__list_completion.snap  chatters_lib__keybinds__tests__display_key_event.snap  chatters_lib__keybinds__tests__parse_key_event-2.snap  chatters_lib__keybinds__tests__parse_key_event-3.snap  chatters_lib__keybinds__tests__parse_key_event-4.snap  chatters_lib__keybinds__tests__parse_key_event.snap  chatters_lib__keybinds__tests__parse_key_events.snap
crates/chatters-lib/src/tui/: command_line.rs  compose.rs  contacts.rs  list.rs  messages.rs
crates/chatters-lib/src/tui/snapshots/: chatters_lib__tui__list__tests__horizontal_list-2.snap  chatters_lib__tui__list__tests__horizontal_list-3.snap  chatters_lib__tui__list__tests__vertical_list-2.snap  chatters_lib__tui__list__tests__vertical_list-3.snap  chatters_lib__tui__list__tests__vertical_list.snap  chatters_lib__tui__list__tests__vertical_list_keep_large_list_filling_screen.snap
crates/chatters-local/: Cargo.toml
crates/chatters-local/src/: lib.rs  main.rs
crates/chatters-matrix/: Cargo.toml
crates/chatters-matrix/src/: lib.rs  main.rs
crates/chatters-signal/: Cargo.toml
crates/chatters-signal/src/: lib.rs  main.rs
src/: backend_actor.rs  backends.rs  command_history.rs  commands.rs  compose.rs  contacts.rs  keybinds.rs  lib.rs  log.rs  main-local.rs  main-matrix.rs  main-signal.rs  main.rs  message.rs  tui.rs  util.rs
src/backends/: local.rs  matrix.rs  signal.rs
