[package]
name = "chatters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
emojis = "0.6.4"
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
futures = "0.3.31"
hex = "0.4.3"
log = { version = "0.4.25", features = ["kv"] }
matrix-sdk = { version = "0.9.0", features = ["sqlite"] }
mime_guess = "2.0.5"
open = "5.3.2"
pico-args = "0.5.0"
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }
qr2term = "0.3.3"
qrcode-generator = "5.0.0"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shell-words = "1.1.0"
tempfile = "3.15.0"
textwrap = "0.16.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tui-textarea = "0.7.0"
url = "2.5.4"

[patch.crates-io]
# For a discussion as to why, see:
# https://github.com/whisperfish/libsignal-service-rs/tree/93c23cf27d27a17a803e34ea3dd6a82d268fa79e#working-around-the-issue-with-curve25519-dalek
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[[bin]]
name = "chatters-signal"
path = "src/main-signal.rs"

[[bin]]
name = "chatters-matrix"
path = "src/main-matrix.rs"

[[bin]]
name = "chatters-local"
path = "src/main-local.rs"
