[package]
name = "chatters-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "time"] }
clap = { version = "4.5.27", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
chrono = "0.4.39"
emojis = "0.6.4"
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
futures = "0.3.31"
log = { version = "0.4.25", features = ["kv"] }
open = "5.3.2"
pico-args = "0.5.0"
qrcode-generator = "5.0.0"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
shell-words = "1.1.0"
tempfile = "3.15.0"
textwrap = "0.16.1"
thiserror = "2.0.9"
tui-textarea = "0.7.0"
url = "2.5.4"
hex = "0.4.3"
toml = "0.8.20"
regex = "1.11.1"

[dev-dependencies]
insta = "1.42.1"
