[package]
name = "chatters-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.9.0", features = ["sqlite"] }

tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
url = "2.5.4"
directories = "5.0.1"
log = { version = "0.4.25", features = ["kv"] }
rand = "0.9.0"

chatters-lib = { path = "../chatters-lib" }
