[package]
name = "chatters-signal"
version = "0.1.0"
edition = "2021"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }

tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
hex = "0.4.3"
mime_guess = "2.0.5"
url = "2.5.4"
anyhow = "1.0.95"
log = { version = "0.4.25", features = ["kv"] }
futures = "0.3.31"
chrono = "0.4.39"
directories = "5.0.1"
clap = { version = "4.5.30", features = ["derive"] }

chatters-lib = { path = "../chatters-lib" }
